# gridtk

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  buildout.cfg  develop.cfg  grid  jman  pyproject.toml  readme.rst  requirements.txt  setup.cfg  setup.py  setup.sh  version.txt
.reuse/: dep5
conda/: meta.yaml
doc/: api.rst  catalog.json  conf.py  generate.rst  index.rst  install.rst  links.rst  manual.rst  nitpick-exceptions.txt  program.rst  usage-api.rst  usage-cli.rst
docs/: Makefile  conf.py  index.rst  manual.rst  program.rst
gridtk/: __init__.py  config.py  easy.py  generator.py  local.py  manager.py  models.py  setshell.py  sge.py  tools.py
gridtk/script/: grid.py  jgen.py  jman.py
gridtk/scripts/: grid.py  jman.py
gridtk/tests/: __init__.py  test_array.sh  test_generator.py  test_script.sh  test_tools.py
src/gridtk/: easy.py  local.py  manager.py  models.py  setshell.py  sge.py  tools.py
src/gridtk/script/: grid.py  jman.py
tests/: __init__.py  conftest.py  test_array.sh  test_local.py  test_tools.py
tests/data/: test_script.sh
